initial styling on t account

--- a/src/setup/styles/variables.scss
+++ b/src/setup/styles/variables.scss
@@ -1,1 +1,6 @@
-$dark-gray: #0c3e50
+$dark-gray: #4f555e;
+$light-gray: #E0E0E0;
+$border-color: #B0B0B0;
+$text-color: #000;
+$peach: #DF694C;
+$teal: #75AD9A;
