--- a/src/components/TAccount/TAccount.scss
+++ b/src/components/TAccount/TAccount.scss
@@ -1,6 +1,21 @@
 .t-account-container {
   border-style: solid;
-  border-width: 2px;
-  border-color: rebeccapurple;
-  width: 10%;
+  border-width: 1px;
+  border-top-left-radius: 24px;
+  border-top-right-radius: 24px;
+
+  border-color: $border-color;
+  width: 50%;
+  overflow: hidden;
+
+  .header {
+    padding: 12px 12px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+
+    .title {
+      
+    }
+  }
 }
