--- a/src/components/TAccount/TAccount.scss
+++ b/src/components/TAccount/TAccount.scss
@@ -1,11 +1,9 @@
 .t-account-container {
-  border-style: solid;
-  border-width: 1px;
-  border-top-left-radius: 24px;
-  border-top-right-radius: 24px;
-
-  border-color: $border-color;
+  border: 1px solid $border-color;
+  border-radius: 24px;
   width: 30%;
+  min-width: 240px;
+  margin: 12px;
   overflow: hidden;
 
   .header {
@@ -16,8 +14,13 @@
   }
 
   .body {
+    padding: 12px;
+
+
     table {
       width: 100%;
+      border: 1px solid $border-color;
+
       .entry {
         width: 100%;
 
