create container for general ledger

--- a/src/screens/HomeScreen/HomeScreen.scss
+++ b/src/screens/HomeScreen/HomeScreen.scss
@@ -4,6 +4,11 @@
   margin: auto;
   padding: 5%;
 
+  .general-ledger-section {
+    margin-top: 12px;
+    margin-bottom: 24px;
+  }
+
   .t-accounts-section {
     display: flex;
     flex-direction: row;
