--- a/src/components/TAccount/TAccount.scss
+++ b/src/components/TAccount/TAccount.scss
@@ -40,5 +40,15 @@
         }
       }
     }
+
+    .ending-balance-divider {
+      width: 100%;
+      margin-top: 12px;
+      margin-bottom: 12px;
+    }
+
+    .t-account-total {
+      font-weight: bold;
+    }
   }
 }
