fix: ending balance styling

--- a/src/components/TAccount/TAccount.scss
+++ b/src/components/TAccount/TAccount.scss
@@ -48,6 +48,13 @@
     }
 
     .t-account-total {
+      background-color: $light-teal;
+
+      .ending-bal-text {
+        font-weight: normal;
+        font-size: smaller;
+      }
+
       font-weight: bold;
     }
   }
