--- a/src/components/TAccount/TAccount.scss
+++ b/src/components/TAccount/TAccount.scss
@@ -59,3 +59,12 @@
     }
   }
 }
+
+.ending-bal-row {
+  font-weight: bold;
+
+  td {
+    /* !important needed here bc semantic-ui also uses important :( */
+    border-top: 1px solid black !important;
+  }
+}
